--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         <td>11/11/2012</td>
                         <td>younes hachadi</td>
                         <td>0558139753</td>
-                        <td></td>
+                        <td><img src="assets/blacklist.jfif" style="width: 48px; height: 48px;margin: 0.2rem; border-radius: 50%;" alt=""></td>
                         <td>koushha</td>
                         <td>adrar</td>
                         <td>timimoun</td>
@@ -190,7 +190,7 @@
                         <td>5</td>
                         <td>5000DA</td>
                         <td><button class="btn-status">Confirme
-                            <img src="assets/triangle_down_icon.svg" alt="">
+                            <img  src="assets/triangle_down_icon.svg" alt="">
                         </button></td>
                         <td>qsdddd</td>
                         <td>they have the permission to open the order </td>
@@ -208,7 +208,7 @@
                         <td>11/11/2012</td>
                         <td>younes hachadi</td>
                         <td>0558139753</td>
-                        <td></td>
+                        <td><img src="assets/blacklist.jfif" style="width: 48px; height: 48px;margin: 0.2rem; border-radius: 50%;" alt=""></td>
                         <td>koushha</td>
                         <td>adrar</td>
                         <td>timimoun</td>
@@ -234,7 +234,7 @@
                         <td>11/11/2012</td>
                         <td>younes hachadi</td>
                         <td>0558139753</td>
-                        <td></td>
+                        <td><img src="assets/blacklist.jfif" style="width: 48px; height: 48px;margin: 0.2rem; border-radius: 50%;" alt=""></td>
                         <td>koushha</td>
                         <td>adrar</td>
                         <td>timimoun</td>
@@ -260,85 +260,7 @@
                         <td>11/11/2012</td>
                         <td>younes hachadi</td>
                         <td>0558139753</td>
-                        <td></td>
-                        <td>koushha</td>
-                        <td>adrar</td>
-                        <td>timimoun</td>
-                        <td>lawzi</td>
-                        <td>5</td>
-                        <td>5000DA</td>
-                        <td><button class="btn-status">Confirme
-                            <img src="assets/triangle_down_icon.svg" alt="">
-                        </button></td>
-                        <td>qsdddd</td>
-                        <td>they have the permission to open the order </td>
-                        <td>sd</td>
-                        <td>3kg</td>
-                        <td>hakim</td>
-                        <td></td>
-
-                    </tr>
-                    <tr class=" red">
-                        <td><input type="checkbox"></td>
-                        <td>01</td>
-                        <td></td>
-                        <td>157846</td>
-                        <td>11/11/2012</td>
-                        <td>younes hachadi</td>
-                        <td>0558139753</td>
-                        <td></td>
-                        <td>koushha</td>
-                        <td>adrar</td>
-                        <td>timimoun</td>
-                        <td>lawzi</td>
-                        <td>5</td>
-                        <td>5000DA</td>
-                        <td><button class="btn-status" style="background-color: rgb(238, 125, 125);">Cancelled
-                            <img src="assets/triangle_down_icon.svg" alt="">
-                        </button></td>
-                        <td>qsdddd</td>
-                        <td>they have the permission to open the order </td>
-                        <td>sd</td>
-                        <td>3kg</td>
-                        <td>hakim</td>
-                        <td></td>
-
-                    </tr>
-                    <tr class="tr">
-                        <td><input type="checkbox"></td>
-                        <td>01</td>
-                        <td></td>
-                        <td>157846</td>
-                        <td>11/11/2012</td>
-                        <td>younes hachadi</td>
-                        <td>0558139753</td>
-                        <td></td>
-                        <td>koushha</td>
-                        <td>adrar</td>
-                        <td>timimoun</td>
-                        <td>lawzi</td>
-                        <td>5</td>
-                        <td>5000DA</td>
-                        <td><button class="btn-status">Confirme
-                            <img src="assets/triangle_down_icon.svg" alt="">
-                        </button></td>
-                        <td>qsdddd</td>
-                        <td>they have the permission to open the order </td>
-                        <td>sd</td>
-                        <td>3kg</td>
-                        <td>hakim</td>
-                        <td></td>
-
-                    </tr>
-                    <tr class="tr">
-                        <td><input type="checkbox"></td>
-                        <td>01</td>
-                        <td></td>
-                        <td>157846</td>
-                        <td>11/11/2012</td>
-                        <td>younes hachadi</td>
-                        <td>0558139753</td>
-                        <td></td>
+                        <td><img src="assets/blacklist.jfif" style="width: 48px; height: 48px;margin: 0.2rem; border-radius: 50%;" alt=""></td>
                         <td>koushha</td>
                         <td>adrar</td>
                         <td>timimoun</td>
@@ -364,7 +286,7 @@
                         <td>11/11/2012</td>
                         <td>younes hachadi</td>
                         <td>0558139753</td>
-                        <td></td>
+                        <td><img src="assets/blacklist.jfif" style="width: 48px; height: 48px;margin: 0.2rem; border-radius: 50%;" alt=""></td>
                         <td>koushha</td>
                         <td>adrar</td>
                         <td>timimoun</td>
@@ -390,7 +312,7 @@
                         <td>11/11/2012</td>
                         <td>younes hachadi</td>
                         <td>0558139753</td>
-                        <td></td>
+                        <td><img src="assets/blacklist.jfif" style="width: 48px; height: 48px;margin: 0.2rem; border-radius: 50%;" alt=""></td>
                         <td>koushha</td>
                         <td>adrar</td>
                         <td>timimoun</td>
@@ -416,7 +338,7 @@
                         <td>11/11/2012</td>
                         <td>younes hachadi</td>
                         <td>0558139753</td>
-                        <td></td>
+                        <td><img src="assets/blacklist.jfif" style="width: 48px; height: 48px;margin: 0.2rem; border-radius: 50%;" alt=""></td>
                         <td>koushha</td>
                         <td>adrar</td>
                         <td>timimoun</td>
@@ -442,7 +364,7 @@
                         <td>11/11/2012</td>
                         <td>younes hachadi</td>
                         <td>0558139753</td>
-                        <td></td>
+                        <td><img src="assets/blacklist.jfif" style="width: 48px; height: 48px;margin: 0.2rem; border-radius: 50%;" alt=""></td>
                         <td>koushha</td>
                         <td>adrar</td>
                         <td>timimoun</td>
@@ -468,7 +390,85 @@
                         <td>11/11/2012</td>
                         <td>younes hachadi</td>
                         <td>0558139753</td>
+                        <td><img src="assets/blacklist.jfif" style="width: 48px; height: 48px;margin: 0.2rem; border-radius: 50%;" alt=""></td>
+                        <td>koushha</td>
+                        <td>adrar</td>
+                        <td>timimoun</td>
+                        <td>lawzi</td>
+                        <td>5</td>
+                        <td>5000DA</td>
+                        <td><button class="btn-status">Confirme
+                            <img src="assets/triangle_down_icon.svg" alt="">
+                        </button></td>
+                        <td>qsdddd</td>
+                        <td>they have the permission to open the order </td>
+                        <td>sd</td>
+                        <td>3kg</td>
+                        <td>hakim</td>
                         <td></td>
+
+                    </tr>
+                    <tr class="tr">
+                        <td><input type="checkbox"></td>
+                        <td>01</td>
+                        <td></td>
+                        <td>157846</td>
+                        <td>11/11/2012</td>
+                        <td>younes hachadi</td>
+                        <td>0558139753</td>
+                        <td><img src="assets/blacklist.jfif" style="width: 48px; height: 48px;margin: 0.2rem; border-radius: 50%;" alt=""></td>
+                        <td>koushha</td>
+                        <td>adrar</td>
+                        <td>timimoun</td>
+                        <td>lawzi</td>
+                        <td>5</td>
+                        <td>5000DA</td>
+                        <td><button class="btn-status">Confirme
+                            <img src="assets/triangle_down_icon.svg" alt="">
+                        </button></td>
+                        <td>qsdddd</td>
+                        <td>they have the permission to open the order </td>
+                        <td>sd</td>
+                        <td>3kg</td>
+                        <td>hakim</td>
+                        <td></td>
+
+                    </tr>
+                    <tr class=" red">
+                        <td><input type="checkbox"></td>
+                        <td>01</td>
+                        <td></td>
+                        <td>157846</td>
+                        <td>11/11/2012</td>
+                        <td>younes hachadi</td>
+                        <td>0558139753</td>
+                        <td><img src="assets/blacklist.jfif" style="width: 48px; height: 48px;margin: 0.2rem; border-radius: 50%;" alt=""></td>
+                        <td>koushha</td>
+                        <td>adrar</td>
+                        <td>timimoun</td>
+                        <td>lawzi</td>
+                        <td>5</td>
+                        <td>5000DA</td>
+                        <td><button class="btn-status" style="background-color: rgb(238, 125, 125);">Cancelled
+                            <img src="assets/triangle_down_icon.svg" alt="">
+                        </button></td>
+                        <td>qsdddd</td>
+                        <td>they have the permission to open the order </td>
+                        <td>sd</td>
+                        <td>3kg</td>
+                        <td>hakim</td>
+                        <td></td>
+
+                    </tr>
+                    <tr class="tr">
+                        <td><input type="checkbox"></td>
+                        <td>01</td>
+                        <td></td>
+                        <td>157846</td>
+                        <td>11/11/2012</td>
+                        <td>younes hachadi</td>
+                        <td>0558139753</td>
+                        <td><img src="assets/blacklist.jfif" style="width: 48px; height: 48px;margin: 0.2rem; border-radius: 50%;" alt=""></td>
                         <td>koushha</td>
                         <td>adrar</td>
                         <td>timimoun</td>
