--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
                                 <img src="assets/triangle_down_icon.svg" alt="">
                             </div>
                         </th>
-                        <th class="col" draggable="true" style="min-width: 220px;">
-                            <div> Notes </div>
+                        <th class="col" draggable="true"  style="min-width: 220px;">
+                            <div class="note"> Notes </div>
                         </th>
                         <th class="col" draggable="true">
                             <div> Weight</div>
